# papertuner

./: .gitignore  Dockerfile  README.md  compose.yml  config.py  data_reqs.txt  data_usage.py  dataset_example.py  diff.txt  example.py  flake.nix  ml_dataset.py  phi_4_(14b)_grpo.py  pyproject.toml  quickstart.sh  requirements.txt  run_experiment.sh  setup.py  train.py  training_example.py
dataset/: 1503_06452v1.json  1509_06095v1.json  1612_03231v1.json  1612_07486v2.json  1612_09030v2.json  1709_05067v1.json  1805_08355v1.json  1806_04640v3.json  1901_09388v2.json  1906_02826v1.json  1908_02130v1.json  1910_13806v1.json  2006_16212v1.json  2103_10252v1.json  2105_05222v2.json  2106_00120v3.json  2106_05554v2.json  2108_01468v1.json  2108_11510v1.json  2108_13817v1.json  2111_09791v1.json  2202_07138v2.json  2204_05437v1.json  2204_11897v3.json  2303_01980v1.json  2303_02715v1.json  2304_10098v2.json  2307_01452v2.json  2401_02349v2.json  2405_15430v1.json  9507009v1.json
examples/: __init__.py  dataset_processing.py  simple_training.py
marimo-examples/: README.md  dataset_explorer.py  inference_dashboard.py  paper_processor.py
paper_dataset_generator/: __init__.py  pipeline.py
papertuner/: __init__.py  config.py  data.py  dataset.py  logging_config.py  ocr.py  pipeline.py  setup.py  sources.py  train.py
papertuner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
research_assistant/: main.py  requirements.txt
scripts/: hugging_face.py  ollama_to_hugging_face.py  transformers_ocr.py
src/: dataset.py  inference.py  train.py
temp/: 0005029v1.json  (+1915 more)
(+51 files in other folders)
