[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.1.3",
    "datasets>=3.4.1",
    "huggingface-hub>=0.29.3",
    "marimo>=0.11.21",
    "openai>=1.66.3",
    "pymupdf>=1.25.4",
    "requests>=2.32.3",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
]
